--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "web3": "^1.0.0-beta.55"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start2": "react-scripts start",
+    "start":"node server/server.js"
     "eject": "react-scripts eject",
     "build": "waffle",
     "build2": "react-scripts build",
