--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "eth-marketplace",
   "version": "0.1.0",
-  "description": "An Ethereum Marketplace",
-  "author": "gregory@dappuniversity.com",
+  "description": "Zenof City",
+  "author": "designerseyi",
   "dependencies": {
     "@openzeppelin/contracts": "^3.3.0",
     "babel-polyfill": "6.26.0",
@@ -28,8 +28,8 @@
     "web3": "^1.0.0-beta.55"
   },
   "scripts": {
+    "start": "node server/server.js",
     "start2": "react-scripts start",
-    "start":"node server/server.js",
     "eject": "react-scripts eject",
     "build": "waffle",
     "build2": "react-scripts build",
